[gd_scene load_steps=5 format=2]

[ext_resource path="res://prefabs/componente/script/FugirNPC.gd" type="Script" id=1]
[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NewPiskel:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewPiskel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "padrao"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("NewPiskel:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewPiskel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -28 ) ]
}

[node name="FugirNPC" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="NewPiskel" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -20 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/RESET = SubResource( 1 )
anims/padrao = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
